--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         facebook:confirm_logout="false"
-<<<<<<< HEAD
         facebook:fetch_user_info="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
@@ -29,14 +28,14 @@
         android:id="@+id/sing_in_button"
         android:layout_above="@+id/login_button"
         android:layout_centerHorizontal="true" />
-
-=======
         facebook:fetch_user_info="true" />
 	<Button
-        android:id="@+id/lanzar"
+        android:id="@+id/ir_registrar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Registrar" />
->>>>>>> FETCH_HEAD
+        android:text="Registrar"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
 
 </RelativeLayout>
