--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -9,6 +9,9 @@
 
     <Spinner
         android:id="@+id/carrera"
+        android:drawSelectorOnTop="true"
+        android:prompt="@string/spinner_carrera"
+        android:spinnerMode="dropdown"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -17,6 +20,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/carrera"
+        android:drawSelectorOnTop="true"
+        android:spinnerMode="dropdown"
+        android:prompt="@string/spinner_escuela"
         android:layout_marginTop="15dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
