--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,21 +21,16 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
-    <view
+    <com.google.android.gms.common.SignInButton
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        class="com.google.android.gms.common.SignInButton"
         android:id="@+id/sing_in_button"
         android:layout_above="@+id/login_button"
+        android:layout_alignStart="@+id/login_button"
+        android:layout_alignLeft="@+id/login_button"
+        android:layout_alignRight="@id/login_button"
+        android:layout_alignEnd="@+id/login_button"
         android:layout_centerHorizontal="true" />
-        facebook:fetch_user_info="true" />
-	<Button
-        android:id="@+id/ir_registrar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Registrar"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
-
 
 </RelativeLayout>
